# phd-computer-science

./: .gitignore  .pre-commit-config.yaml  PHASE2_LIMITS.md  PHASE3_LIMITS.md  PHASE4_LIMITS.md  README.md  WAKE_UP.md
.github/workflows/: ci.yml
applications/: artifacts_strategy.md  interview_prep_template.md  sop_narrative_skeleton.md
applications/interviews/: per_advisor_prep.md  scenarios.md
applications/recommender_packets/: _template.md
applications/sop_variants/: cmu_lti_savelka.md  edinburgh_ilcc_lapata.md  jhu_clsp_khashabi.md  stanford_reglab.md  umass_ciir_zamani.md
applications/submission/: arxiv_prep_guide.md  blockers.md  (+6 more)
citecheck/: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
citecheck/docs/: architecture.md
citecheck/notebooks/: quickstart.ipynb
citecheck/scripts/: build_bm25_index.py  build_dense_index.py  download_cap.py  run_baseline.py  run_citecheck.py  train_reranker.py  verify_scaffold.py
citecheck/src/citecheck/: __init__.py  cli.py  config.py
citecheck/src/citecheck/agent/: __init__.py  citation_resolver.py  grammar.py  loop.py
citecheck/src/citecheck/baselines/: __init__.py  crag.py  el_rag.py  naive_rag.py  protocol.py  self_rag.py  vanilla.py
citecheck/src/citecheck/data/: __init__.py  benchmarks.py  cap_loader.py  cl_client.py  eval_set.py
citecheck/src/citecheck/eval/: __init__.py  judge.py  metrics.py  runner.py  types.py
citecheck/src/citecheck/reranker/: __init__.py  dataset.py  loss.py  model.py  train.py
citecheck/src/citecheck/retrieval/: __init__.py  bm25.py  dense.py  fusion.py
citecheck/tests/: conftest.py  test_agent.py  test_baselines.py  test_config.py  test_data.py  test_eval_runner.py  test_metrics.py  test_retrieval.py
citecheck/tests/fixtures/: smoke_corpus.jsonl  smoke_eval.jsonl
community/: networking_strategy.md
decisions/: offer_evaluation.md  rejection_protocol.md
financial/: international_considerations.md  stipend_planning.md
journal/: decisions.md  phase2_milestone_templates.md  phase4_closeout_template.md  weekly.md
learning/: decision_frameworks.md  how_to_read_papers.md  note_taking_system.md  research_skills_curriculum.md  writing_practices.md
literature/: deep_read_priority.md  reading_list.md  taxonomy.md
outreach/: advisors.md  email_template.md  log.md  programs.md
project/: candidates.md  citecheck_design.md  m2_lock_checklist.md  problem_statement.md
roadmap/: THE_ROADMAP.md  bottlenecks_protocols.md
wellness/: relationships_communication.md  sustainable_practices.md
(+31 files in other folders)
