[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citecheck"
version = "0.1.0"
description = "Open benchmark and agentic-RAG method for verifiable US case-law citations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Paul L. Gabule" }]
keywords = ["legal-nlp", "rag", "agents", "citation-verification", "llm"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.4,<3",
    "transformers>=4.45,<5",
    "peft>=0.12,<1",
    "trl>=0.11,<1",
    "bitsandbytes>=0.43,<1",
    "accelerate>=0.34,<2",
    "datasets>=3.0,<4",
    # Retrieval
    "sentence-transformers>=3.0,<4",
    "pyserini>=0.24,<1",
    "rank-bm25>=0.2.2,<1",
    "faiss-cpu>=1.8,<2",
    # Legal-specific
    "eyecite>=2.6,<3",          # Bluebook citation parsing (CourtListener team)
    "courts-db>=0.10,<1",       # Court name -> CourtListener ID mapping
    "reporters-db>=3.2,<4",     # Bluebook reporter abbreviations
    # Constrained decoding
    "outlines>=0.1,<2",
    # Agent + tools
    "httpx>=0.27,<1",
    "tenacity>=8.5,<10",
    # Eval + misc
    "scikit-learn>=1.5,<2",
    "bert-score>=0.3.13,<1",    # EL-RAG Evidence Alignment Layer proxy (flagged by K)
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pyarrow>=16.0,<20",        # parquet IO backend for pandas (flagged by data layer agent)
    "tqdm>=4.66,<5",
    "rich>=13.7,<15",
    "click>=8.1,<9",            # CLI entry points
    "python-dotenv>=1.0,<2",
    "wandb>=0.17,<1",           # experiment tracking (free tier)
    "huggingface-hub>=0.25,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-mock>=3.14,<4",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "ipython>=8.27,<9",
    "jupyter>=1.0,<2",
]

[project.scripts]
citecheck = "citecheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests requiring downloaded data or API access",
    "gpu: tests requiring GPU",
    "network: tests requiring internet",
]
